--- a/style.css
+++ b/style.css
@@ -228,15 +228,15 @@ header {
         border-radius: 10px;
         padding: 1rem;
         margin-right: 2rem;
+        height: 10rem;
      }
      .offers-banner h4, p {
-        width: 45%;
+        width: 70%;
 
         margin-bottom: 10px;
      }
-     .offers-banner button {
+     .offers-banner button, .app-banner button {
         background-color: #0071c2;
-        
         padding: 10px 15px;
         font-weight: bold;
         border-radius: 3px;
@@ -249,5 +249,10 @@ header {
         color: white;
      }
      .img-app {
-        width: 150px;
+        width: 125px;
+     }
+     .app-banner {
+        display: flex;
+        border-radius: 10px;
+        display: flex;
      }
