--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ header {
         height: 10rem;
      }
      .offers-banner h4, p {
-        width: 70%;
+        width: 60%;
 
         margin-bottom: 10px;
      }
@@ -244,15 +244,37 @@ header {
         border: none;
 
      }
-     .offers-banner button a {
+     .offers-banner button a, .app-banner a{
         text-decoration: none;
         color: white;
      }
      .img-app {
-        width: 125px;
+        width: 150px;
      }
      .app-banner {
-        display: flex;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.188);
         border-radius: 10px;
         display: flex;
+        align-items: center;
+        padding: 1rem;
+        width: 50%;
+     }  
+     .app-banner p{
+        margin: .5rem 0;
+        width: 70%;   /*.5 é igual a 0.5*/
+
      }
+     .destination {
+        margin-top: 2rem;
+
+     }
+     .list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+     }
+     .list img {
+        width: 200px;
+     }
+
+
