--- a/style.css
+++ b/style.css
@@ -143,6 +143,16 @@ header {
     font-size: 16px;
 }
 
+@media (max-width: 600px) { /* executa quando largura maxima da tela for ate 600px*/
+    #form--filter-content {
+        flex-direction: column;
+        height: 300px;
+    }
+
+}
+
+
+
 #form-filter-content
  {
     border: 2px solid #febb02;
