--- a/style.css
+++ b/style.css
@@ -143,16 +143,6 @@ header {
     font-size: 16px;
 }
 
-@media (max-width: 600px) { /* executa quando largura maxima da tela for ate 600px*/
-    #form-filter-content {
-        flex-direction: column;
-        min-height: 250px;
-    }
-
-}
-
-
-
 #form-filter-content
  {
     border: 2px solid #febb02;
@@ -519,4 +509,32 @@ header {
     }
 
     
+@media (max-width: 600px) { /* executa quando largura maxima da tela for ate 600px*/
+    #form-filter-content {
+        flex-direction: column;
+        min-height: 250px;
+    }
+    .offers-list{
+     flex-direction: column;  
+       
+      
+    }
+    .offers-banner h4, p {
+        margin-top: 10px;
+    }
+    .offers-banner, app-banner {
+        margin-top: 1rem;
+        width: 100%;
+    }
+
+    .app-banner p {                    
+        width: 90%;
+        
+        
+    }
+        
+
+    }
+
+
 
